--- a/css/front/form1.css
+++ b/css/front/form1.css
@@ -1,4 +1,3 @@
-/*In this part are all the media queries*/
 
 @media (max-width:800px) {
 
@@ -92,9 +91,80 @@
         padding: 0.5em;
         transition: color 0.3s ease;
     }
+
+    .headermobile a{
+        color: azure;
+        text-decoration: none;
+    }
         
     .headermobile nav ul li a:hover {
         color: #00d9ff;
     }
 
+}
+
+
+
+
+@media (max-width: 768px) {
+    form {
+        padding: 20px 25px;
+    }
+
+    form .title {
+        font-size: 28px;
+    }
+
+    form label {
+        margin-bottom: 25px;
+    }
+
+    form label .fa-regular,
+    form label .fa-solid {
+        font-size: 18px;
+    }
+
+    form label input,
+    form label select,
+    form label textarea {
+        font-size: 16px;
+        max-width: 100%;
+    }
+
+    form button {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 480px) {
+    form {
+        padding: 15px 20px;
+    }
+
+    form .title {
+        font-size: 24px;
+    }
+
+    form label {
+        margin-bottom: 20px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    form label .fa-regular,
+    form label .fa-solid {
+        font-size: 16px;
+        margin-right: 5px;
+    }
+
+    form label input,
+    form label select,
+    form label textarea {
+        font-size: 14px;
+    }
+
+    form button {
+        font-size: 16px;
+        padding: 8px 12px;
+    }
 }
