--- a/css/front/galery.css
+++ b/css/front/galery.css
@@ -1,31 +1,99 @@
-
-section{
-    display: flex;
-    width: 100%;
-    height: 800px;
+* {
+  margin: 0%;
+  padding: 0%;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
-section h2{
+/*---------------------------------*/
+
+header {
+  background-color: #a3a3a3;
+  padding: 20px;
+  text-align: center;
+}
+
+header a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+nav {
+  margin-top: 30px;
+}
+
+nav a {
+  margin: 0 30px;
+  text-decoration: none;
+  color: #333;
+}
+
+
+/*In this part I will edit the new header, we will see how it turns out.*/
+
+.headermobile {
   display: none;
 }
 
-section img{
-    width: 0px;
-    flex-grow: 1;
-    object-fit: cover;
-    opacity: .8;
-    transition: .5s ease;
+.headermobile nav ul {
+  display: flex;
+  list-style: none;
+  transition: transform 0.4s ease;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  padding: 1em 0;
+  transform: translateY(-20px);
+  opacity: 0;
+  visibility: hidden;
 }
 
-section img:hover{
-    cursor: crosshair;
-    width: 500px;
-    opacity: 1;
-    filter: contrast(120%);
+.headermobile nav ul.show {
+  transform: translateY(0);
+  opacity: 1;
+  visibility: visible;
 }
 
 
-.button{
+.menu-icon {
+  display: none;
+  font-size: 1.8em;
+  cursor: pointer;
+  margin-left: auto;
+  z-index: 101;
+}
+
+/*----------------------------------*/
+
+section {
+  display: flex;
+  width: 100%;
+  height: 800px;
+}
+
+section h2 {
+  display: none;
+}
+
+section img {
+  width: 0px;
+  flex-grow: 1;
+  object-fit: cover;
+  opacity: .8;
+  transition: .5s ease;
+}
+
+section img:hover {
+  cursor: crosshair;
+  width: 500px;
+  opacity: 1;
+  filter: contrast(120%);
+}
+
+/*----------------------------------*/
+
+.button {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -34,35 +102,120 @@ section img:hover{
 }
 
 .botton-redireccion {
-    background: #fff; 
-    color: #4741d7; 
-    border: 2px solid #4741d7;
-    padding: 16px 20px;
-    border-radius: 3px; 
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    display: inline-block;
-  }
-  .botton-redireccion:hover {
-    color: #fff;
-  }
-  .botton-redireccion::after {
-    content: "";
-    background: #4741d7;
-    position: absolute;
-    z-index: -1;
-    padding: 16px 20px;
-    display: block;
-    border-radius: 50%;
-    left: -50%;
-    right: -50%;
-    top: -150%;
-    bottom: -150%;
-    transform: scale(0, 0);
-    transition: all 0.4s ease;
-  }
-  .botton-redireccion:hover::after {
-    transition: all 0.6s ease-out;
-    transform: scale(1, 1);
-  }
+  background: #fff;
+  color: #4741d7;
+  border: 2px solid #4741d7;
+  padding: 16px 20px;
+  border-radius: 3px;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.botton-redireccion:hover {
+  color: #fff;
+}
+
+.botton-redireccion::after {
+  content: "";
+  background: #4741d7;
+  position: absolute;
+  z-index: -1;
+  padding: 16px 20px;
+  display: block;
+  border-radius: 50%;
+  left: -50%;
+  right: -50%;
+  top: -150%;
+  bottom: -150%;
+  transform: scale(0, 0);
+  transition: all 0.4s ease;
+}
+
+.botton-redireccion:hover::after {
+  transition: all 0.6s ease-out;
+  transform: scale(1, 1);
+}
+
+/*--------------------------------*/
+
+footer {
+  background-color: #111;
+}
+
+.footerContainer {
+  width: 100%;
+  padding: 30px 15px 10px;
+}
+
+.socialIcons {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.socialIcons a {
+  text-decoration: none;
+  padding: 6px;
+  background-color: white;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
+
+.socialIcons a i {
+  font-size: 0.9em;
+  color: black;
+  opacity: 0.9;
+}
+
+.socialIcons a:hover {
+  background-color: #5c5c5c;
+}
+
+.socialIcons a:hover i {
+  color: white;
+}
+
+.footerNav {
+  margin: 15px 0;
+}
+
+.footerNav ul {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  gap: 15px;
+}
+
+.footerNav ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 0.9em;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+}
+
+.footerNav ul li a:hover {
+  opacity: 1;
+}
+
+.footerBottom {
+  background-color: #000;
+  padding: 8px;
+  text-align: center;
+}
+
+.footerBottom p {
+  color: white;
+  font-size: 0.8em;
+}
+
+.designer {
+  opacity: 0.5;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0 5px;
+  font-size: 0.7em;
+}
