--- a/css/front/media-acueri-front01.css
+++ b/css/front/media-acueri-front01.css
@@ -23,7 +23,7 @@
 
 }
 
-@media (max-width:700px) {
+@media (max-width:710px) {
 
     header {
         display: flex;
@@ -41,7 +41,7 @@
     }
 }
 
-@media (max-width:590px) {
+@media (max-width:620px) {
 
     header {
         display: none;
@@ -63,6 +63,7 @@
         font-size: 1.8em;
         font-weight: 700;
     }
+
     .menu-icon {
         display: block;
     }
@@ -70,7 +71,7 @@
     .headermobile nav ul {
         display: flex;
         flex-direction: column;
-        background: linear-gradient(to bottom, black,rgb(168, 168, 168), black);
+        background: linear-gradient(to bottom, black, rgb(168, 168, 168), black);
         position: absolute;
         top: 100%;
         right: 0;
@@ -92,9 +93,101 @@
         padding: 0.5em;
         transition: color 0.3s ease;
     }
-        
+
+    .headermobile a {
+        color: azure;
+        text-decoration: none;
+    }
+
     .headermobile nav ul li a:hover {
         color: #00d9ff;
     }
 
+}
+
+/*----------------------------------------------*/
+
+
+@media (max-width: 700px) {
+    .footerNav ul {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .footerNav ul li {
+        width: 100%;
+        text-align: center;
+    }
+
+    .socialIcons a {
+        padding: 5px;
+    }
+}
+
+@media (max-width: 500px) {
+    .footerContainer {
+        padding: 20px 10px 5px;
+    }
+
+    .socialIcons {
+        gap: 6px;
+    }
+
+    .socialIcons a {
+        padding: 4px;
+    }
+
+    .socialIcons a i {
+        font-size: 0.8em;
+    }
+
+    .footerNav ul {
+        gap: 6px;
+    }
+
+    .footerNav ul li a {
+        font-size: 0.8em;
+    }
+
+    .footerBottom p {
+        font-size: 0.7em;
+    }
+
+    .designer {
+        font-size: 0.6em;
+    }
+}
+
+@media (max-width: 350px) {
+    .footerContainer {
+        padding: 15px 8px 5px;
+    }
+
+    .socialIcons {
+        gap: 4px;
+    }
+
+    .socialIcons a {
+        padding: 3px;
+    }
+
+    .socialIcons a i {
+        font-size: 0.7em;
+    }
+
+    .footerNav ul {
+        gap: 4px;
+    }
+
+    .footerNav ul li a {
+        font-size: 0.7em;
+    }
+
+    .footerBottom p {
+        font-size: 0.6em;
+    }
+
+    .designer {
+        font-size: 0.5em;
+    }
 }
