--- a/css/front1/frommedia2.css
+++ b/css/front1/frommedia2.css
@@ -1,5 +1,3 @@
-/*In this part are all the media queries*/
-
 @media (max-width:800px) {
 
     header {
@@ -105,10 +103,24 @@
 
 }
 
+/*----------------------------------------*/
 
+@media (max-width: 768px) {
+    main {
+        padding: 20px;
+        margin: 20px;
+    }
 
-/*------------------------------*/
+    h1 {
+        font-size: 2rem;
+    }
 
+    p {
+        font-size: 1rem;
+    }
+}
+
+/*----------------------------------------*/
 
 @media (max-width: 700px) {
     .footerNav ul {
